# vizzavi

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: element.rs  figure.rs  lib.rs  main.rs
src/backend/: bitmap.rs
vizz/: Cargo.toml
vizz-backend/: Cargo.toml
vizz-types/: Cargo.toml
vizz-types/src/: lib.rs
vizz/examples/: shader.wgsl
