[package]
name = "vizzavi"
version = "0.2.0"
edition = "2021"
description = "Eperimental Visualization Library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonaspleyer/vizzavi"


[dependencies]
image = "0.25.6"
nalgebra = "0.34.0"
ndarray = "0.16.1"
num = "0.4.3"
simba = "0.9.0"
thiserror = "2.0.12"

[dev-dependencies]
